# mklSparse

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/: parallelSpmv.h  parallelSpmvCleanData.h  parallelSpmvData.h
src/main/: parallelSpmv.c
src/reader/: CMakeLists.txt  reader.c  vectorReader.c
